--- a/TakeOrSelectPhoto/Base.lproj/Main.storyboard
+++ b/TakeOrSelectPhoto/Base.lproj/Main.storyboard
@@ -2,6 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -23,7 +25,9 @@
                                     <constraint firstAttribute="height" constant="43" id="GCW-aq-u9A"/>
                                     <constraint firstAttribute="width" constant="131" id="TTk-EO-4YZ"/>
                                 </constraints>
-                                <state key="normal" title="Take Photo"/>
+                                <state key="normal" title="Take Photo">
+                                    <color key="titleColor" red="0.95565180517519133" green="1" blue="0.9571049225397702" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="takePhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ELC-2o-c4J"/>
                                 </connections>
@@ -32,19 +36,37 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="520"/>
                                 <color key="backgroundColor" red="0.30491966855800257" green="0.43384381391109506" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="saV-C6-k52">
+                                <rect key="frame" x="461" y="537" width="123" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="123" id="jou-tu-3od"/>
+                                </constraints>
+                                <state key="normal" title="Select Photo">
+                                    <color key="titleColor" red="0.95565180517519133" green="1" blue="0.9571049225397702" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="selectPhoto:" destination="BYZ-38-t0r" eventType="touchUpInside" id="knF-HS-rZg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="i65-qj-B6I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="DJL-py-3kc"/>
+                            <constraint firstItem="saV-C6-k52" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="ERa-Nk-Sh0"/>
                             <constraint firstItem="QE7-xv-CSD" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="N7w-5g-2kz"/>
+                            <constraint firstItem="saV-C6-k52" firstAttribute="baseline" secondItem="i65-qj-B6I" secondAttribute="firstBaseline" id="NKN-CU-Kss"/>
                             <constraint firstAttribute="bottom" secondItem="i65-qj-B6I" secondAttribute="bottom" constant="20" symbolic="YES" id="ONi-mS-PW1"/>
                             <constraint firstAttribute="trailing" secondItem="QE7-xv-CSD" secondAttribute="trailing" id="UsA-xt-6qb"/>
                             <constraint firstItem="QE7-xv-CSD" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="dLg-oL-rUN"/>
+                            <constraint firstItem="saV-C6-k52" firstAttribute="top" secondItem="i65-qj-B6I" secondAttribute="top" id="fJw-Cy-IOh"/>
+                            <constraint firstItem="saV-C6-k52" firstAttribute="firstBaseline" secondItem="i65-qj-B6I" secondAttribute="baseline" id="mPP-Qy-KeZ"/>
                             <constraint firstItem="i65-qj-B6I" firstAttribute="top" secondItem="QE7-xv-CSD" secondAttribute="bottom" constant="17" id="tK0-79-Ddx"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="imageViewSelect" destination="QE7-xv-CSD" id="4Fm-eZ-d8q"/>
+                        <outlet property="selectPhoto" destination="saV-C6-k52" id="ml2-UV-ty2"/>
                         <outlet property="takePhoto" destination="i65-qj-B6I" id="bmv-AZ-xC9"/>
                     </connections>
                 </viewController>
